# turasm

./: CHANGELOG.md  README.md  bridge.lua  bridge.tsm  mine.lua  mine.tsm  stack.yaml  test.lua  test.tsm  turasm.cabal
.stack-work/: stack.sqlite3
.stack-work/ghci/03ba4f49/: cabal_macros.h
.stack-work/ghci/3d7b0014/: cabal_macros.h
.stack-work/ghci/41357882/: cabal_macros.h
.stack-work/ghci/5c1c2f49/: cabal_macros.h
.stack-work/ghci/67077f2f/: cabal_macros.h
.stack-work/ghci/cdd42857/: cabal_macros.h
src/: Main.hs  TurASM.hs
src/TurASM/: Parser.hs  Writer.hs
src/TurASM/Parser/: Expr.hs  Getter.hs  Instruction.hs  Types.hs
src/TurASM/Writer/: Expr.hs  Instruction.hs  Prelude.hs
src/TurASM/Writer/Prelude/: Func.hs  Var.hs
