cabal-version:       2.2

name:                turasm
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/archaversine/turasm#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Archaversine
maintainer:          awbrohl@knox.com
copyright:           2023 Adam Brohl
category:            Other
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable turasm
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       TurASM 
                       TurASM.Parser 
                       TurASM.Parser.Types
                       TurASM.Parser.Getter
                       TurASM.Parser.Expr
                       TurASM.Parser.Instruction
                       TurASM.Writer
                       TurASM.Writer.Expr
                       TurASM.Writer.Instruction
                       TurASM.Writer.Prelude
                       TurASM.Writer.Prelude.Var
                       TurASM.Writer.Prelude.Func
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, megaparsec, mtl, split, directory
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
